ajout de la page piste

--- a/src/app/composants/footer/footer.component.html
+++ b/src/app/composants/footer/footer.component.html
@@ -67,7 +67,7 @@
                                 [routerLinkActiveOptions]="{ exact: true }">Accueil</a></li>
                             <li><a routerLink="/Apropos" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">à propos</a></li>
-                            <li><a href="#">des pistes</a></li>
+                            <li><a href="/pistes">des pistes</a></li>
                             <li><a routerLink="/Contact" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">contactds</a></li>
                         </ul>
