--- a/src/app/composants/navs/navs.component.html
+++ b/src/app/composants/navs/navs.component.html
@@ -23,7 +23,7 @@
                                             [routerLinkActiveOptions]="{ exact: true }">À propos</a></li>
                                         <li><a routerLink="" routerLinkActive="active"
                                             [routerLinkActiveOptions]="{ exact: true }">Potfolio</a></li>
-                                        <li><a routerLink="" routerLinkActive="active"
+                                        <li><a routerLink="/pistes" routerLinkActive="active"
                                             [routerLinkActiveOptions]="{ exact: true }">des pistes</a></li>
                                         <li><a routerLink="/Contact" routerLinkActive="active"
                                             [routerLinkActiveOptions]="{ exact: true }">Contacts</a></li>
